# hs-synth

./: FilterSaw.hs  Main.hs  Mine.hs  MineTwo.hs  Plain.hs  Realtime.hs  Signal2.hs  UI.hs  compile.sh  synthi.cabal
