Name:                Synthi
Version:             0.1
Description:         Playing around
License:             GPL
License-file:        LICENSE
Author:              Jarra
Maintainer:          suhrawardi@gmail.com
Build-Type:          Simple
Cabal-Version:       >=1.2

Executable synthi
  Main-is:           Main.hs
  Build-Depends:     base >= 3 && < 5,
                     Euterpea,
                     numeric-prelude,
                     sox,
                     storablevector,
                     transformers,
                     UISF >= 0.4,
                     utility-ht,
                     synthesizer-core
